--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':lifecycle-extentions2', ':appjava'
+include ':appkotlin', ':lifecycle-extentions2', ':appjava'
 rootProject.name='Lifecycle Extentions'
